--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -286,6 +286,12 @@
   "detRevealField": "Revelar",
   "detHideField": "Ocultar",
   "detAutoTypeField": "Autocompletado",
+  "detIssuesHideTooltip": "Ocultar esta advertencia",
+  "detIssueWeakPassword": "La contraseña es débil, se recomienda cambiarla.",
+  "detIssuePoorPassword": "La contraseña es muy débil, se recomienda encarecidamente cambiarla.",
+  "detIssuePwnedPassword": "La contraseña ha sido expuesta en una filtración de datos de acuerdo a {}, se recomienda cambiarla.",
+  "detIssuePasswordCheckError": "Ha sucedido un error al comprobar en línea la fortaleza de la contraseña.",
+  "detIssueOldPassword": "La contraseña es antigua.",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Teclas modificadoras",
   "autoTypeKeys": "Teclas",
@@ -424,6 +430,17 @@
   "setGenShowAppLogs": "Mostrar registros de la aplicación",
   "setGenReloadApp": "Recargar la aplicación",
   "setGenFieldLabelDblClickAutoType": "Autocompletar al hacer doble clic sobre las etiquetas de los campos",
+  "setGenAudit": "Auditar",
+  "setGenAuditPasswords": "Mostrar advertencias sobre la fortaleza de las contraseñas",
+  "setGenAuditPasswordEntropy": "Comprobar longitud y aleatoriedad de las contraseñas",
+  "setGenExcludePinsFromAudit": "Nunca comprobar códigos PIN numéricos, como 123456",
+  "setGenCheckPasswordsOnHIBP": "Comprobar contraseñas usando el servicio en línea {}",
+  "setGenHelpHIBP": "KeeWeb puede comprobar si tus contraseñas han sido previamente expuestas en una filtración de datos usando un servicio en línea. Tu contraseña no se podrá recuperar de la información mandada a través de la red, aunque sí podría verse expuesto el número de contraseñas comprobadas de esta forma. Puedes encontrar más información acerca de la privacidad de tus datos usando este servicio {}. Si está opción está activada, KeeWeb comprobará automáticamente tus contraseñas en este apartado.",
+  "setGenHelpHIBPLink": "aquí",
+  "setGenAuditPasswordAge": "Contraseñas antiguas",
+  "setGenAuditPasswordAgeOff": "No mostrar advertencias sobre contraseñas antiguas",
+  "setGenAuditPasswordAgeOneYear": "Mostrar advertencias para contraseñas más antiguas que un año",
+  "setGenAuditPasswordAgeYears": "Mostrar advertencias para contraseñas más antiguas que {} años",
   "setFilePath": "Ruta de archivo",
   "setFileStorage": "Este archivo se ha cargado desde {}.",
   "setFileIntl": "Este archivo está almacenado dentro de la aplicación.",
@@ -640,5 +657,6 @@
   "yubiKeyTouchRequestedBody": "Por favor, toca tu YubiKey con el número de serie {}",
   "yubiKeyDisabledErrorHeader": "USB desactivado",
   "yubiKeyDisabledErrorBody": "Se requiere una YubiKey para abrir este archivo, por favor, activa los dispositivos USB en las opciones.",
-  "yubiKeyErrorWithCode": "Error de YubiKey, código {}."
+  "yubiKeyErrorWithCode": "Error de YubiKey, código {}.",
+  "bioOpenAuthPrompt": "abrir \"{}\""
 }
