--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -286,6 +286,12 @@
   "detRevealField": "Felfed",
   "detHideField": "Elrejt",
   "detAutoTypeField": "Automatikus gépelés",
+  "detIssuesHideTooltip": "Figyelmeztetése elrejtése",
+  "detIssueWeakPassword": "A jelszó gyenge, javasolt a cseréje.",
+  "detIssuePoorPassword": "A jelszó nagyon gyenge, erősen javasolt a cseréje.",
+  "detIssuePwnedPassword": "Ez a jelszó a {} szerint adatszivárgásban érintett, javasolt a cseréje.",
+  "detIssuePasswordCheckError": "Hiba történt a jelszó erősségének online ellenőrzésekor.",
+  "detIssueOldPassword": "A jelszó régi.",
   "autoTypeEntryFields": "Beviteli mezők",
   "autoTypeModifiers": "Módosító kulcsok",
   "autoTypeKeys": "Kulcsok",
@@ -424,6 +430,12 @@
   "setGenShowAppLogs": "Alkalmazás napló megjelenítése",
   "setGenReloadApp": "Az alkalmazás újratöltése",
   "setGenFieldLabelDblClickAutoType": "Automatikus gépelés, mező feliratok dupla-kattintására",
+  "setGenAudit": "Ellenőrzés",
+  "setGenAuditPasswords": "Jelszó erősségével kapcsolatos figyelmeztetések",
+  "setGenAuditPasswordEntropy": "Jelszó hossz és véletlenszerűség ellenőrzése",
+  "setGenExcludePinsFromAudit": "Soha ne ellenőrizze a rövid numerikus PIN kódokat (pl. 123456)",
+  "setGenHelpHIBPLink": "itt",
+  "setGenAuditPasswordAge": "Régi jelszavak",
   "setFilePath": "Fájl elérési út",
   "setFileStorage": "Ez a fájl betöltve innen: {}",
   "setFileIntl": "A fájl a belső alkalmazástárolóban van tárolva.",
