--- a/docs/translations/ja/ja.json
+++ b/docs/translations/ja/ja.json
@@ -35,7 +35,7 @@
   "onedrive": "OneDrive",
   "menuAllItems": "すべての項目",
   "menuColors": "色",
-  "menuTrash": "ゴミ箱",
+  "menuTrash": "ごみ箱",
   "menuSetGeneral": "一般",
   "menuSetAbout": "概要",
   "menuSetDevices": "デバイス",
@@ -45,8 +45,8 @@
   "menuEmptyTrashAlert": "ゴミ箱を空にしますか?",
   "menuEmptyTrashAlertBody": "項目を元に戻すことはできません",
   "menuItemCollapsed": "展開するにはダブルクリックしてください",
-  "menuRestoreApp": "開く{}",
-  "menuQuitApp": "閉じる{}",
+  "menuRestoreApp": "{} を開く",
+  "menuQuitApp": "{}を閉じる",
   "alertYes": "はい",
   "alertNo": "いいえ",
   "alertOk": "了解",
@@ -185,7 +185,7 @@
   "openError": "エラー",
   "openErrorDescription": "ファイルを開くときにエラーが発生しました",
   "openErrorFileNotFound": "ファイルが見つかりませんでした",
-  "openListErrorBody": "ファイルを開くときにエラーが発生しました",
+  "openListErrorBody": "ファイルリストの読み込み中にエラーが発生しました",
   "openShowAllFiles": "全ファイルを表示",
   "openFileNoCacheError": "キャッシュストレージ内のファイルが見つかりませんでした。これはブラウザーのストレージがクリーンアップされた際に発生する場合があります。ファイルを開くには、KeeWebから削除して、もう一度追加してください。",
   "openChalRespHeader": "チャレンジレスポンス認証",
@@ -286,6 +286,11 @@
   "detRevealField": "表示",
   "detHideField": "隠す",
   "detAutoTypeField": "自動入力",
+  "detIssuesHideTooltip": "この警告を隠す",
+  "detIssueWeakPassword": "パスワードが弱いので、変更をお勧めします。",
+  "detIssuePoorPassword": "パスワードが非常に弱いです。変更を強く勧めます。",
+  "detIssuePwnedPassword": "{}によると、このパスワードはデータ漏洩で晒されています。変更を勧めます。",
+  "detIssuePasswordCheckError": "オンラインでパスワードの強度を確認する際、エラーが発生しました。",
   "autoTypeEntryFields": "エントリー内のフィールド",
   "autoTypeModifiers": "修飾キー",
   "autoTypeKeys": "キー",
@@ -349,19 +354,29 @@
   "setGenExtractingUpdate": "更新を抽出中...",
   "setGenCheckErr": "新しいバージョンのダウンロード中にエラーが発生しました",
   "setGenNeverChecked": "更新を確認しない",
-  "setGenRestartToUpdate": "更新してアプリを再起動する",
+  "setGenRestartToUpdate": "更新してKeeWebを再起動する",
   "setGenDownloadAndRestart": "更新をダウンロードして再起動する",
   "setGenAppearance": "外観",
   "setGenTheme": "テーマ",
+  "setGenThemeDefault": "デフォルト",
   "setGenThemeDark": "ダーク",
   "setGenThemeLight": "ライト",
-  "setGenThemeFb": "フラットブルー",
+  "setGenThemeBlue": "フラットブルー",
+  "setGenThemeFb": "ダークブルー",
+  "setGenThemeBl": "ライトブルー",
+  "setGenThemeBrown": "ブラウニー",
   "setGenThemeDb": "ダークブラウン",
+  "setGenThemeLb": "ライトブラウン",
+  "setGenThemeTerminal": "ターミナル",
   "setGenThemeTe": "ターミナル",
+  "setGenThemeHighContrast": "ハイコントラスト",
   "setGenThemeHc": "ハイコントラスト",
+  "setGenThemeDc": "ダークコントラスト",
+  "setGenThemeSol": "ソラリゼーション",
   "setGenThemeSd": "Solarized ダーク",
   "setGenThemeSl": "Solarized ライト",
   "setGenMoreThemes": "その他のテーマ",
+  "setGenAutoSwitchTheme": "可能な場合はライトとダークを自動的に切り替える",
   "setGenLocale": "言語",
   "setGenLocOther": "他の言語はプラグインで利用可能です",
   "setGenFontSize": "フォントサイズ",
@@ -413,6 +428,9 @@
   "setGenShowAppLogs": "アプリのログを表示する",
   "setGenReloadApp": "アプリを再読み込みする",
   "setGenFieldLabelDblClickAutoType": "フィールドの題名をダブルクリックで自動入力する",
+  "setGenAuditPasswords": "パスワードの強度に関する警告を表示する",
+  "setGenHelpHIBPLink": "こちら",
+  "setGenAuditPasswordAgeYears": "{}年以上前のパスワードに警告を表示する",
   "setFilePath": "ファイルパス",
   "setFileStorage": "{}からファイルをロードしました。",
   "setFileIntl": "このファイルはアプリ内部のストレージに格納されています",
@@ -629,5 +647,6 @@
   "yubiKeyTouchRequestedBody": "シリアル番号{}のYubiKeyにタップしてください",
   "yubiKeyDisabledErrorHeader": "USBが無効です",
   "yubiKeyDisabledErrorBody": "このファイルを開くにはYubiKeyが必要です。設定からUSBデバイスを有効化してください。",
-  "yubiKeyErrorWithCode": "YubiKeyエラー、コード{}"
+  "yubiKeyErrorWithCode": "YubiKeyエラー、コード{}",
+  "bioOpenAuthPrompt": "\"{}\" を開く"
 }
