--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -286,6 +286,12 @@
   "detRevealField": "Weergeven",
   "detHideField": "Verbergen",
   "detAutoTypeField": "Auto-type",
+  "detIssuesHideTooltip": "Deze waarschuwing verbergen",
+  "detIssueWeakPassword": "Het wachtwoord is zwak, het wordt aanbevolen om het te wijzigen.",
+  "detIssuePoorPassword": "Het wachtwoord is erg zwak, het wordt sterk aanbevolen om het te wijzigen",
+  "detIssuePwnedPassword": "Dit wachtwoord is volgens {} blootgesteld aan een datalek, het wordt aanbevolen om het te wijzigen.",
+  "detIssuePasswordCheckError": "Er is een fout opgetreden bij het online controleren van de wachtwoordsterkte.",
+  "detIssueOldPassword": "Het wachtwoord is oud.",
   "autoTypeEntryFields": "Itemvelden",
   "autoTypeModifiers": "Speciale toetsen",
   "autoTypeKeys": "Toetsen",
@@ -424,6 +430,17 @@
   "setGenShowAppLogs": "App-logs weergeven",
   "setGenReloadApp": "App opnieuw laden",
   "setGenFieldLabelDblClickAutoType": "Automatisch invullen bij dubbelklikken van veldlabels",
+  "setGenAudit": "Controle",
+  "setGenAuditPasswords": "Waarschuwingen over wachtwoordsterkte weergeven",
+  "setGenAuditPasswordEntropy": "Wachtwoordlengte en willekeurigheid controleren",
+  "setGenExcludePinsFromAudit": "Korte numerieke pincodes, zoals 123456, nooit controleren",
+  "setGenCheckPasswordsOnHIBP": "Controleer wachtwoorden met een online service {}",
+  "setGenHelpHIBP": "KeeWeb kan via een online service controleren of je wachtwoorden eerder zijn blootgesteld aan een datalek. Je wachtwoord kan niet worden herleid op basis van online verzonden gegevens, maar het aantal op deze manier gecontroleerde wachtwoorden is zichtbaar. Meer informatie over je privacy bij het gebruik van deze service is te vinden op {}. Als deze optie is ingeschakeld, zal KeeWeb daar automatisch je wachtwoorden controleren.",
+  "setGenHelpHIBPLink": "hier",
+  "setGenAuditPasswordAge": "Oude wachtwoorden",
+  "setGenAuditPasswordAgeOff": "Geen waarschuwingen weergeven over oude wachtwoorden",
+  "setGenAuditPasswordAgeOneYear": "Waarschuwingen weergeven voor wachtwoorden die ouder zijn dan een jaar",
+  "setGenAuditPasswordAgeYears": "Waarschuwingen weergeven voor wachtwoorden die ouder zijn dan {} jaar",
   "setFilePath": "Bestandspad",
   "setFileStorage": "Dit bestand is geladen van {}.",
   "setFileIntl": "Dit bestand is opgeslagen in de interne app-storage.",
@@ -640,5 +657,6 @@
   "yubiKeyTouchRequestedBody": "Raak je YubiKey aan met serienummer {}",
   "yubiKeyDisabledErrorHeader": "USB is uitgeschakeld",
   "yubiKeyDisabledErrorBody": "YubiKey is vereist om dit bestand te openen, schakel in instellingen USB-apparaten in.",
-  "yubiKeyErrorWithCode": "Yubikey fout, code {}"
+  "yubiKeyErrorWithCode": "Yubikey fout, code {}",
+  "bioOpenAuthPrompt": "{} te openen"
 }
