--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -286,6 +286,12 @@
   "detRevealField": "Ujawnij",
   "detHideField": "Ukryj",
   "detAutoTypeField": "Auto. wpisz",
+  "detIssuesHideTooltip": "Ukryj to ostrzeżenie",
+  "detIssueWeakPassword": "Hasło jest słabe, warto je zmienić.",
+  "detIssuePoorPassword": "Hasło jest bardzo słabe, zdecydowanie warto je zmienić.",
+  "detIssuePwnedPassword": "To hasło zostało ujawnione w wyniku wycieku danych według {}, zaleca się jego zmianę.",
+  "detIssuePasswordCheckError": "Wystąpił błąd podczas sprawdzania online siły hasła.",
+  "detIssueOldPassword": "Hasło jest stare.",
   "autoTypeEntryFields": "Pola wpisu",
   "autoTypeModifiers": "Klawisze modyfikujące",
   "autoTypeKeys": "Klawisze",
@@ -349,7 +355,7 @@
   "setGenExtractingUpdate": "Wypakowywanie aktualizacji...",
   "setGenCheckErr": "Wystąpił błąd podczas pobierania nowej wersji",
   "setGenNeverChecked": "Nigdy nie sprawdzono aktualizacji",
-  "setGenRestartToUpdate": "Uruchom ponownie, aby zaktualizować",
+  "setGenRestartToUpdate": "Uruchom ponownie KeeWeb, aby zaktualizować",
   "setGenDownloadAndRestart": "Pobierz aktualizację i uruchom ponownie",
   "setGenAppearance": "Wygląd",
   "setGenTheme": "Motyw",
@@ -424,6 +430,17 @@
   "setGenShowAppLogs": "Pokaż logi aplikacji",
   "setGenReloadApp": "Załaduj ponownie aplikację",
   "setGenFieldLabelDblClickAutoType": "Autowpisywanie po dwukrotnym kliknięciu etykiet pól",
+  "setGenAudit": "Audyt",
+  "setGenAuditPasswords": "Pokaż ostrzeżenia o sile hasła",
+  "setGenAuditPasswordEntropy": "Sprawdź długość i losowość hasła",
+  "setGenExcludePinsFromAudit": "Nigdy nie sprawdzaj krótkich numerycznych kodów PIN, np. 123456",
+  "setGenCheckPasswordsOnHIBP": "Sprawdź hasła, korzystając z usługi online {}",
+  "setGenHelpHIBP": "KeeWeb może sprawdzić za pomocą usługi online, czy Twoje hasła nie zostały wcześniej ujawnione w wyniku wycieku danych. Twoje hasło nie może zostać odzyskane na podstawie danych przesłanych online, jednak może zostać ujawniona liczba sprawdzonych haseł. Więcej informacji na temat prywatności podczas korzystania z tej usługi można znaleźć {}. Jeśli ta opcja jest włączona, KeeWeb automatycznie sprawdzi tam Twoje hasła.",
+  "setGenHelpHIBPLink": "tutaj",
+  "setGenAuditPasswordAge": "Stare hasła",
+  "setGenAuditPasswordAgeOff": "Nie pokazuj ostrzeżeń o starych hasłach",
+  "setGenAuditPasswordAgeOneYear": "Pokaż ostrzeżenia o hasłach starszych niż rok",
+  "setGenAuditPasswordAgeYears": "Pokaż ostrzeżenia o hasłach starszych niż {} lat(a)",
   "setFilePath": "Ścieżka pliku",
   "setFileStorage": "Ten plik jest wczytany z {}.",
   "setFileIntl": "Ten plik jest przechowywany w wewnętrznym magazynie aplikacji",
@@ -640,5 +657,6 @@
   "yubiKeyTouchRequestedBody": "Proszę dotknąć YubiKey o numerze seryjnym {}",
   "yubiKeyDisabledErrorHeader": "USB jest wyłączone",
   "yubiKeyDisabledErrorBody": "YubiKey jest wymagany do otwarcia tego pliku, włącz urządzenia USB w ustawieniach.",
-  "yubiKeyErrorWithCode": "Błąd YubiKey, kod {}."
+  "yubiKeyErrorWithCode": "Błąd YubiKey, kod {}.",
+  "bioOpenAuthPrompt": "otworzyć plik {}"
 }
