--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -191,6 +191,7 @@
   "openChalRespLoading": "Carregando a lista de YubiKeys",
   "openChalRespSelectYubiKey": "Selecione o YubiKey que você gostaria de usar",
   "openChalRespErrorEmpty": "Nenhum YubiKey encontrado.",
+  "openChalRespErrorEmptyMac": "Primeira vez utilizando essa funcionalidade no macOS? KeeWeb precisa ser adicionado nas configurações de monitoração de entrada",
   "detAttDownload": "Shift-clique no botão anexo para baixar ou",
   "detAttDelToRemove": "Excluir para remover",
   "detAttSave": "Salvar como ...",
@@ -244,6 +245,7 @@
   "detMenuAddField": "Adicionar {}",
   "detMenuCopyPassword": "Copiar senha",
   "detMenuCopyUser": "Copiar usuário",
+  "detMenuCopyOtp": "Copie a senha única",
   "detSetupOtp": "Senhas únicas",
   "detClone": "Faça uma cópia",
   "detCopyEntryToClipboard": "Copiar todos os campos",
@@ -274,6 +276,7 @@
   "detOtpQrErrorBody": "Lamentamos, mas não conseguimos ler o código QR, tente novamente ou contacte os autores da aplicação com os detalhes do erro.",
   "detOtpQrWrong": "Código QR errado",
   "detOtpQrWrongBody": "Seu código QR foi digitalizado com êxito, mas não contém dados de senha únicos.",
+  "detOtpField": "senha única",
   "detOtpClickToTouch": "Clique para gerar",
   "detOtpGenerating": "Gerando...",
   "detOtpTouch": "Toque em seu {}",
@@ -282,6 +285,12 @@
   "detRevealField": "Mostrar",
   "detHideField": "Esconder",
   "detAutoTypeField": "Autocompletar",
+  "detIssuesHideTooltip": "esconder esse aviso",
+  "detIssueWeakPassword": "Sua senha é fraca, é recomendável que mude.",
+  "detIssuePoorPassword": "A sua senha é muito fraca, é altamente recomendável que mude-a",
+  "detIssuePwnedPassword": "Essa senha foi comprometida em um vazamento de acordo com {}, é recomendado que mude-a",
+  "detIssuePasswordCheckError": "Houve um erro ao checar a força da sua senha",
+  "detIssueOldPassword": "A senha é antiga.",
   "autoTypeEntryFields": "Campos de entrada",
   "autoTypeModifiers": "Modificar teclas",
   "autoTypeKeys": "Chaves",
@@ -311,6 +320,8 @@
   "appSaveError": "Salvar erro",
   "appSaveErrorBody": "Falha ao salvar automaticamente o arquivo",
   "appSaveErrorBodyMul": "Falha ao salvar automaticamente os arquivos:",
+  "appSaveErrorExitLoseChanges": "sair sem salvar",
+  "appSaveErrorExitLoseChangesBody": "Você pode sair do app e sem salvar as mudanças ou vá nas configurações para exportar.",
   "appSettingsError": "Erro ao carregar o app",
   "appSettingsErrorBody": "Ocorreu um erro ao carregar as configurações do aplicativo. Verifique o URL do aplicativo ou entre em contato com seu administrador.",
   "appNotSupportedError": "Seu navegador não é suportado.",
@@ -346,7 +357,12 @@
   "setGenDownloadAndRestart": "Fazer o download da atualização e reiniciar",
   "setGenAppearance": "Aparência",
   "setGenTheme": "Tema",
+  "setGenThemeDefault": "Padrão",
+  "setGenThemeDark": "Escuro",
+  "setGenThemeLight": "Claro",
+  "setGenThemeBlue": "Azul escuro",
   "setGenThemeFb": "Azul plano",
+  "setGenThemeBl": "Azul claro",
   "setGenThemeDb": "Marrom escuro",
   "setGenThemeTe": "Terminal",
   "setGenThemeHc": "Alto contraste",
@@ -365,6 +381,9 @@
   "setGenShowSubgroups": "Mostrar entradas de todos os subgrupos",
   "setGenTableView": "Exibir a lista de inscrições",
   "setGenColorfulIcons": "Icones personalizados usam cor na lista",
+  "setGenUseMarkdown": "Notas em Markdown",
+  "setGenUseGroupIconForEntries": "Usar automaticamente ícones de grupos para novas entradas.",
+  "setGenDirectAutotype": "Se uma combinação for encontrada, seleciona automaticamente para auto preenchimento.",
   "setGenFunction": "Função",
   "setGenAutoSyncOnClose": "Salvar e sincronizar automaticamente ao fechar",
   "setGenAutoSyncTimer": "Salvar automaticamente e sincronizar periodicamente",
@@ -399,6 +418,18 @@
   "setGenTryBetaWarningBody": "Por favor salve todos os arquivos e clique aqui novamente",
   "setGenShowAppLogs": "Mostrar logs",
   "setGenReloadApp": "Recarregar o aplicativo",
+  "setGenFieldLabelDblClickAutoType": "Preencher automaticamente ao dar clique duplo nos campos.",
+  "setGenAudit": "Verificar",
+  "setGenAuditPasswords": "Mostrar alertas sobre complexidade de senha",
+  "setGenAuditPasswordEntropy": "Checar tamanho da senha e aleatoriedade.",
+  "setGenExcludePinsFromAudit": "Nunca checar códigos numéricos PIN, como 123456",
+  "setGenCheckPasswordsOnHIBP": "Checar senhas usando o serviço {}",
+  "setGenHelpHIBP": "KeeWeb pode verificar se suas senhas foram comprometidas em vazamentos de dados. Sua senha não pode ser recuperada baseado nos dados vazados, porém senhas checadas nesses serviços podem ser comprometidas por estarem sendo enviadas para outro lugar em que não temos o controle. Mais sobre sua privacidade ao utilizar este serviço poderão ser encontrados aqui: {}. Se essa opção for marcada, KeeWeb irá verificar suas senhas nesse serviço.",
+  "setGenHelpHIBPLink": "aqui",
+  "setGenAuditPasswordAge": "senhas antigas",
+  "setGenAuditPasswordAgeOff": "Esconder avisos sobre senhas antigas",
+  "setGenAuditPasswordAgeOneYear": "Mostrar avisos de senhas mais antigas que 1 ano.",
+  "setGenAuditPasswordAgeYears": "Mostrar aletas sobre senhas mais antigas que {} anos.",
   "setFilePath": "Caminho do arquivo",
   "setFileStorage": "Este arquivo é carregado de {}.",
   "setFileIntl": "Esse arquivos está salvo no armazenamento interno",
@@ -426,6 +457,7 @@
   "setFileDefUser": "Usuário padrão",
   "setFileEnableTrash": "Ativar lixeira",
   "setFileHistMode": "Histórico de entradas",
+  "setFileHistLimited": "Apagar todo os registros automaticamente.",
   "setFileHistDisabled": "Não salvar histórico",
   "setFileHistUnlimited": "Manter informações do histórico para sempre",
   "setFileHistLen": "Quantidade do histórico, mantenha os últimos registros por entrada",
@@ -439,6 +471,7 @@
   "setFileBackupError": "Erro de backup",
   "setFileBackupErrorDescription": "Erro ao gravar o arquivo de backup",
   "setFileBackupErrorIsDir": "Caminho do backup inválido",
+  "setFileBackupErrorIsDirDescription": "O caminho do arquivo parece ser uma pasta. Por favor especifique o nome do arquivo contido dentro dessa pasta.",
   "setFileBackupOnSave": "Toda vez eu salvo este arquivo",
   "setFileBackupDaily": "Diario",
   "setFileBackupWeekly": "Semanalmente",
@@ -468,8 +501,12 @@
   "setFileFormatVersion": "Formato de arquivo",
   "setFileExportRaw": "Exportando suas senhas",
   "setFileExportRawBody": "O arquivo exportado irá conter suas senhas, lá elas não serão criptografadas. Deseja prosseguir?",
+  "setFileDeviceIntro": "códigos únicos através do {} serão mostradas no app.",
   "setFileDeviceSettings": "Configurações",
+  "setFileDontUseYubiKey": "Não utilizar o YubiKey",
   "setFileRefreshYubiKeyList": "Atualizar a lista",
+  "setFileYubiKeyBody": "Utilizando o YubiKey como parte da senha mestre é perigoso e poderá acarretar em perda de acesso às suas senhas caso acontecer algo de errado. Certifique de realizar o backup de seus arquivos antes de alterar essa configuração.",
+  "setFileYubiKeyErrorEmptyMac": "Parece que você tem um YubiKey conectado, mas não está visível. KeeWeb precisa ser adicionado ao monitoramento de entrada, nas configurações para que tenha acesso ao YubiKey",
   "setShTitle": "Atalhos",
   "setShShowAll": "Mostra todos os itens",
   "setShColors": "Mostra itens com cores",
