--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -286,6 +286,12 @@
   "detRevealField": "Odhaliť",
   "detHideField": "Skryť",
   "detAutoTypeField": "Auto type",
+  "detIssuesHideTooltip": "Skryť toto upozornenie",
+  "detIssueWeakPassword": "Heslo je slabé, odporúčame zmeniť ho.",
+  "detIssuePoorPassword": "Heslo je veľmi slabé, dôrazne odporúčame zmeniť ho.",
+  "detIssuePwnedPassword": "Toto heslo sa nachádza v zozname prelomených hesiel podľa {}, je odporúčané ho zmeniť.",
+  "detIssuePasswordCheckError": "Pri online overení sily hesla nastala chyba.",
+  "detIssueOldPassword": "Heslo je staré.",
   "autoTypeEntryFields": "Polia záznamu",
   "autoTypeModifiers": "Špeciálne klávesy",
   "autoTypeKeys": "Klávesy",
@@ -349,19 +355,30 @@
   "setGenExtractingUpdate": "Rozbaľovanie aktualizácie...",
   "setGenCheckErr": "Chyba pri sťahovaní novej verzie",
   "setGenNeverChecked": "Nikdy nekontrolovať aktualizácie",
-  "setGenRestartToUpdate": "Pre dokončenie reštartujte aplikáciu",
+  "setGenRestartToUpdate": "Pre aktualizáciu reštartujte KeeWeb",
   "setGenDownloadAndRestart": "Stiahnuť aktualizáciu a reštartovať",
   "setGenAppearance": "Vzhľad",
   "setGenTheme": "Téma",
+  "setGenThemeDefault": "Predvolená",
   "setGenThemeDark": "Tmavá",
   "setGenThemeLight": "Svetlá",
-  "setGenThemeFb": "fádna modrá",
+  "setGenThemeBlue": "Fádna modrá",
+  "setGenThemeFb": "Tmavomodrá",
+  "setGenThemeBl": "Svetlomodrá",
+  "setGenThemeBrown": "Brownie",
   "setGenThemeDb": "Tmavá hnedá",
+  "setGenThemeLb": "Svetlohnedá",
+  "setGenThemeTerminal": "Terminál",
   "setGenThemeTe": "Terminál",
+  "setGenThemeLt": "Svetlý terminál",
+  "setGenThemeHighContrast": "Vysoký kontrast",
   "setGenThemeHc": "Vysoký kontrast",
+  "setGenThemeDc": "Tmavý kontrast",
+  "setGenThemeSol": "Solarizovaná",
   "setGenThemeSd": "Preexponovaná tmavá",
   "setGenThemeSl": "Preexponovaná svetlá",
   "setGenMoreThemes": "Viac tém",
+  "setGenAutoSwitchTheme": "Automaticky prepínať medzi svetlou a tmavou témou, keď je to možné",
   "setGenLocale": "Jazyk",
   "setGenLocOther": "ďalšie jazyky sú dostupné ako doplnok",
   "setGenFontSize": "Veľkosť písma",
@@ -413,6 +430,17 @@
   "setGenShowAppLogs": "Zobraziť logy",
   "setGenReloadApp": "Reštartovať aplikáciu",
   "setGenFieldLabelDblClickAutoType": "Auto-type dvojitým kliknutím na popis pola",
+  "setGenAudit": "Audit",
+  "setGenAuditPasswords": "Zobrazovať upozornenia o sile hesla",
+  "setGenAuditPasswordEntropy": "Overiť dĺžku hesla a náhodnosť",
+  "setGenExcludePinsFromAudit": "Neoverovať krátke číselné PIN kódy, ako sú 123456",
+  "setGenCheckPasswordsOnHIBP": "Overiť heslo pomocou online služby {}",
+  "setGenHelpHIBP": "KeeWeb môže overiť, či heslo nebolo prelomené pomocou online služby. Vaše heslo nemôže byť obnovené na základe dát poslaných online, každopádne počet overení hesiel môže byť viditeľné. Viac o vašom súkromí pri použití tejto služby nájdete {}. Ak je táto voľba zapnutá, KeeWeb bude automaticky overovať vaše heslá.",
+  "setGenHelpHIBPLink": "tu",
+  "setGenAuditPasswordAge": "Staré heslá",
+  "setGenAuditPasswordAgeOff": "Nezobrazovať upozornenia o starých heslách",
+  "setGenAuditPasswordAgeOneYear": "Zobraziť upozornenia pre heslá staršie ako jeden rok",
+  "setGenAuditPasswordAgeYears": "Zobraziť upozornenia pre heslá staršie ako {} rok(y)",
   "setFilePath": "Cesta k súboru",
   "setFileStorage": "Súbor je načítaný z {}.",
   "setFileIntl": "Súbor je uložený v internom úložisku aplikácie",
@@ -629,5 +657,6 @@
   "yubiKeyTouchRequestedBody": "Prosím, dotknite sa svojho YubiKey so sériovým číslom {}",
   "yubiKeyDisabledErrorHeader": "USB je zakázané",
   "yubiKeyDisabledErrorBody": "YubiKey požaduje otvoriť tento súbor, prosím povoľte USB zariadenia v nastaveniach.",
-  "yubiKeyErrorWithCode": "Chyba YubiKey, kód {}."
+  "yubiKeyErrorWithCode": "Chyba YubiKey, kód {}.",
+  "bioOpenAuthPrompt": "otvoriť \"{}\""
 }
