--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -353,15 +353,26 @@
   "setGenDownloadAndRestart": "Güncellemeyi indir ve yeniden başlat",
   "setGenAppearance": "Görünüm",
   "setGenTheme": "Tema",
+  "setGenThemeDefault": "Varsayılan",
   "setGenThemeDark": "Koyu",
   "setGenThemeLight": "Açık",
-  "setGenThemeFb": "Düz mavi",
+  "setGenThemeBlue": "Düz mavi",
+  "setGenThemeFb": "Koyu mavi",
+  "setGenThemeBl": "Açık mavi",
+  "setGenThemeBrown": "Kahverengi",
   "setGenThemeDb": "Koyu kahverengi",
+  "setGenThemeLb": "Açık kahverengi",
+  "setGenThemeTerminal": "Uçbirim",
   "setGenThemeTe": "Uçbirim",
+  "setGenThemeLt": "Açık uçbirim",
+  "setGenThemeHighContrast": "Yüksek kontrast",
   "setGenThemeHc": "Yüksek kontrast",
+  "setGenThemeDc": "Koyu kontrast",
+  "setGenThemeSol": "Solarize",
   "setGenThemeSd": "Solarize koyu",
   "setGenThemeSl": "Solarize aydınlık",
   "setGenMoreThemes": "Diğer temalar",
+  "setGenAutoSwitchTheme": "Mümkün olduğunda otomatik olarak açık ve koyu tema arasında geçiş yapın",
   "setGenLocale": "Dil",
   "setGenLocOther": "Diğer diller eklenti olarak mevcuttur",
   "setGenFontSize": "Yazı tipi boyutu",
@@ -570,7 +581,7 @@
   "setAboutTitle": "Hakkında",
   "setAboutBuilt": "Bu uygulama, bu müthiş araçlar ile oluşturuldu",
   "setAboutLic": "Lisans",
-  "setAboutLicComment": "Uygulamanın kendisi ve kamu malı olmayan tüm bileşenler MIT lisansı altında lisanslıdır.",
+  "setAboutLicComment": "Uygulamanın kendisi ve içerdiği tüm bileşenler MIT lisansı altında lisanslanmıştır.",
   "setAboutFirst": "Bu açık kaynak kodlu uygulama şu kişiler tarafından oluşturuldu {}",
   "setAboutSecond": "ve {} altında lisanslanmıştır.",
   "setAboutSource": "Kaynak kod ve sorunlar {} üzerinde.",
