--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -188,6 +188,11 @@
   "openListErrorBody": "加载文件列表时出现错误",
   "openShowAllFiles": "显示所有文件",
   "openFileNoCacheError": "无法在缓存中找到文件。发生这个现象是由于浏览器缓存被清除。如需打开文件，请将原文件从KeeWeb中移除，并再次添加。",
+  "openChalRespHeader": "挑战-应答",
+  "openChalRespLoading": "加载YubiKeys列表",
+  "openChalRespSelectYubiKey": "选择您要使用的YubiKey",
+  "openChalRespErrorEmpty": "找不到YubiKey。",
+  "openChalRespErrorEmptyMac": "第一次在macOS上使用此功能？必须将KeeWeb添加到安全设置的输入监视部分。",
   "detAttDownload": "Shift+点击 附件 按钮下载或按",
   "detAttDelToRemove": "Delete 键删除文件",
   "detAttSave": "另存为",
@@ -241,6 +246,7 @@
   "detMenuAddField": "添加 {}",
   "detMenuCopyPassword": "复制密码",
   "detMenuCopyUser": "复制用户名",
+  "detMenuCopyOtp": "复制一次性密码",
   "detSetupOtp": "一次性密码",
   "detClone": "制作副本",
   "detCopyEntryToClipboard": "复制所有字段",
@@ -271,13 +277,21 @@
   "detOtpQrErrorBody": "抱歉，我们无法读取此二维码，请再尝试一次，或者联系应用开发者并提供错误详情。",
   "detOtpQrWrong": "错误的二维码",
   "detOtpQrWrongBody": "您的二维码扫描成功，但未包含一次性密码数据。",
+  "detOtpField": "一次性密码",
   "detOtpClickToTouch": "点击以产生",
   "detOtpGenerating": "生成中",
+  "detOtpTouch": "触摸您的 {}",
   "detLockField": "锁定该字段，锁定后其内容将不可被搜索及不可见。如需显示相关内容，请单击该字段。",
   "detUnlockField": "取消锁定该字段，使其内容立刻可被搜索及可见",
   "detRevealField": "提示",
   "detHideField": "隐藏",
   "detAutoTypeField": "自动填充",
+  "detIssuesHideTooltip": "隐藏此警告",
+  "detIssueWeakPassword": "密码很弱，建议更改密码。",
+  "detIssuePoorPassword": "密码很弱，强烈建议更改它。",
+  "detIssuePwnedPassword": "此密码{}已暴露在数据泄露中，建议对其进行更改。",
+  "detIssuePasswordCheckError": "在线检查密码强度时出错。",
+  "detIssueOldPassword": "这是旧密码",
   "autoTypeEntryFields": "记录字段",
   "autoTypeModifiers": "修饰键",
   "autoTypeKeys": "按键",
@@ -308,6 +322,8 @@
   "appSaveError": "保存出错",
   "appSaveErrorBody": "自动保存文件失败",
   "appSaveErrorBodyMul": "自动保存失败：",
+  "appSaveErrorExitLoseChanges": "退出并放弃更改",
+  "appSaveErrorExitLoseChangesBody": "您可以退出应用程序并放弃所有更改，也可以转到“文件设置”以导出数据",
   "appSettingsError": "载入应用时发生错误",
   "appSettingsErrorBody": "加载应用设置时出错。请再次检查应用网址或联系您的管理员。",
   "appNotSupportedError": "您的浏览器不支持我们使用的一些重要特性。",
@@ -343,12 +359,24 @@
   "setGenDownloadAndRestart": "下载更新并重启应用",
   "setGenAppearance": "外观",
   "setGenTheme": "主题",
+  "setGenThemeDefault": "默认",
+  "setGenThemeDark": "深色",
+  "setGenThemeLight": "浅色",
+  "setGenThemeBlue": "淡蓝色",
   "setGenThemeFb": "蓝灰",
+  "setGenThemeBl": "浅蓝色",
   "setGenThemeDb": "深棕",
+  "setGenThemeLb": "浅棕",
+  "setGenThemeTerminal": "终端",
   "setGenThemeTe": "终端",
+  "setGenThemeLt": "终端(浅色)",
+  "setGenThemeHighContrast": "高对比度",
   "setGenThemeHc": "高对比度",
+  "setGenThemeDc": "深色对比",
   "setGenThemeSd": "深绿",
   "setGenThemeSl": "浅绿",
+  "setGenMoreThemes": "更多主题",
+  "setGenAutoSwitchTheme": "明暗主题自动切换",
   "setGenLocale": "语言",
   "setGenLocOther": "其他语言可作为插件获得",
   "setGenFontSize": "字体大小",
@@ -399,6 +427,18 @@
   "setGenTryBetaWarningBody": "请保存所有文件，并再次点击按钮。",
   "setGenShowAppLogs": "显示应用日志",
   "setGenReloadApp": "重新加载应用",
+  "setGenFieldLabelDblClickAutoType": "双击字段标签时自动键入",
+  "setGenAudit": "检查",
+  "setGenAuditPasswords": "显示有关密码强度的警告",
+  "setGenAuditPasswordEntropy": "检查密码长度和随机性",
+  "setGenExcludePinsFromAudit": "从不检查短数字PIN码，如123456",
+  "setGenCheckPasswordsOnHIBP": "使用联机服务检查密码{}",
+  "setGenHelpHIBP": "KeeWeb可以使用在线服务检查您的密码是否在数据泄露中被泄露。无法根据联机发送的数据恢复您的密码，但是这样检查的密码数可能会暴露。有关使用此服务时的隐私的详细信息，请参见{}。如果启用此选项，KeeWeb将自动检查您的密码。",
+  "setGenHelpHIBPLink": "此处",
+  "setGenAuditPasswordAge": "旧密码",
+  "setGenAuditPasswordAgeOff": "不显示有关旧密码的警告",
+  "setGenAuditPasswordAgeOneYear": "显示超过一年的密码警告",
+  "setGenAuditPasswordAgeYears": "显示超过 {}年的密码警告",
   "setFilePath": "文件路径",
   "setFileStorage": "文件加载自 {}。",
   "setFileIntl": "文件保存在程序内部",
@@ -468,8 +508,16 @@
   "setFileCloseNoSave": "关闭并放弃更改",
   "setFileDontClose": "不要关闭",
   "setFileFormatVersion": "文件格式",
+  "setFileExportRaw": "导出你的密码",
+  "setFileExportRawBody": "导出的文件将包含您的密码，在此处不会进行加密。 您是否继续吗？",
+  "setFileDeviceIntro": "一次性密码{}将显示在该应用程序。",
   "setFileDeviceSettings": "设置",
+  "setFileYubiKey": "YubiKey",
+  "setFileDontUseYubiKey": "不使用YubiKey",
   "setFileRefreshYubiKeyList": "刷新列表",
+  "setFileYubiKeyHeader": "YubiKey",
+  "setFileYubiKeyBody": "将YubiKey用作主密钥的一部分很危险，如果出现问题，您可能会失去密码库访问权限。 更改此设置之前，您是否已备份文件？",
+  "setFileYubiKeyErrorEmptyMac": "看起来好像插入了YubiKey，但是它不可见。 必须将KeeWeb添加到安全设置的“输入监视”部分，才能访问YubiKeys。",
   "setShTitle": "快捷键",
   "setShShowAll": "显示所有项",
   "setShColors": "显示有颜色的项",
@@ -526,7 +574,25 @@
   "setPlAutoUpdate": "自动更新",
   "setPlLoadGallery": "加载插件库",
   "setDevicesTitle": "设备",
+  "setDevicesEnableUsb": "启用与USB设备交互",
+  "setDevicesYubiKeyIntro": "建议在使用YubiKey之前先阅读 {} 。",
   "setDevicesYubiKeyIntroLink": "这个文件",
+  "setDevicesYubiKeyToolsDesc": "要在此模式下使用YubiKey，您需要安装一个{}的工具。",
+  "setDevicesYubiKeyToolsDesc2": "{} 以获得有关此工具的更多信息。",
+  "setDevicesYubiKeyToolsDescLink": "点击此处",
+  "setDevicesYubiKeyToolsStatusChecking": "检测{}是否安装",
+  "setDevicesYubiKeyToolsStatusOk": "{} 已安装",
+  "setDevicesYubiKeyToolsStatusError": "{} 未安装或无法正常工作",
+  "setDevicesYubiKeyOtpTitle": "一次性密码",
+  "setDevicesYubiKeyOtpDesc": "YubiKey可用于为不同的服务生成一次性密码。",
+  "setDevicesYubiKeyOtpShowIcon": "在开始屏幕上显示图标",
+  "setDevicesYubiKeyOtpAutoOpen": "打开文件时自动加载一次性密码",
+  "setDevicesYubiKeyOtpMatchEntries": "在条目中显示匹配的一次性代码",
+  "setDevicesYubiKeyChalRespTitle": "挑战/应答",
+  "setDevicesYubiKeyChalRespDesc": "也可以在挑战/应答模式下使用YubiKey，以便在YubiKey上驻留一段用于加密文件的私钥。",
+  "setDevicesYubiKeyChalRespShow": "显示打开文件时使用YubiKey的选项",
+  "setDevicesYubiKeyStuckWorkaround": "如果在加载过程中YubiKey卡住，请重新连接它",
+  "setDevicesYubiKeyRememberChalResp": "打开应用程序时记住挑战/应答",
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
@@ -565,6 +631,8 @@
   "webdavSaveMethod": "保存方式",
   "webdavSaveMove": "上传一个临时文件并移动",
   "webdavSavePut": "以 PUT 方式覆盖文件",
+  "webdavNoLastModified": "缺少Last-Modified HTTP标头",
+  "webdavStatReload": "始终重新加载文件，而不是依赖Last-Modified HTTP标头",
   "launcherSave": "保存密码数据库",
   "launcherFileFilter": "KeePass 文件",
   "authPopupRequired": "弹出窗口已被阻止",
@@ -579,6 +647,14 @@
   "importIgnoreField": "忽略",
   "importTo": "条目将被导入到",
   "importNewFile": "新文件",
+  "yubiKeyStuckError": "YubiKey似乎卡住，可以在应用程序设置中启用自动修复。",
+  "yubiKeyNoKeyHeader": "需要YubiKey",
+  "yubiKeyNoKeyBody": "请插入序列号为{} YubiKey",
   "yubiKeySlot": "插槽",
-  "yubiKeyDisabledErrorHeader": "usb不可用"
+  "yubiKeyTouchRequestedHeader": "确认您的YubiKey",
+  "yubiKeyTouchRequestedBody": "请确认序列号{}的YubiKey",
+  "yubiKeyDisabledErrorHeader": "usb不可用",
+  "yubiKeyDisabledErrorBody": "需要YubiKey才能打开此文件，请在设置中启用USB设备。",
+  "yubiKeyErrorWithCode": "YubiKey错误，代码{}。",
+  "bioOpenAuthPrompt": "打开 \"{}\""
 }
